--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,19 +2,101 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"ok\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\tanko\\\\Individual Coding Projects\\\\Trading-Chatbot-Generative-AI\\\\research'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(\"ok\")"
+    "%pwd #project working directory"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "os.chdir(\"../\") #One folder back"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c:\\\\Users\\\\tanko\\\\Individual Coding Projects\\\\Trading-Chatbot-Generative-AI'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%pwd # To check folder location else path issue\n",
+    "     # Always check in Project Folder directory \n",
+    "     # (Trading-Chatbot-Generative-AI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.document_loaders import PyPDFLoader, DirectoryLoader\n",
+    "from langchain.text_splitter import RecursiveCharacterTextSplitter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract Data From the PDF File\n",
+    "\n",
+    "def load_pdf_file(data):\n",
+    "    #glob: load PDF documents\n",
+    "    #loader_cls: Extract information from PDF\n",
+    "    loader = DirectoryLoader(data,\n",
+    "                             glob=\".pdf\",\n",
+    "                             loader_cls=PyPDFLoader)\n",
+    "    documents = loader.load()\n",
+    "    return documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Obtain extracted information from PDF\n",
+    "extracted_data = load_pdf_file(data='Data\\\\')"
    ]
   },
   {
@@ -25,7 +107,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\tanko\\\\Individual Coding Projects\\\\Trading-Chatbot-Generative-AI'"
+       "[]"
       ]
      },
      "execution_count": 9,
@@ -34,37 +116,7 @@
     }
    ],
    "source": [
-    "%pwd #project working directory"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os \n",
-    "os.chdir(\"../\") #One folder back"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\tanko\\\\Individual Coding Projects'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%pwd #project working directory"
+    "extracted_data"
    ]
   },
   {
@@ -77,7 +129,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tradebot",
    "language": "python",
    "name": "python3"
   },
@@ -91,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
